--- a/ASM_JAVA5/src/main/resources/templates/product/list.html
+++ b/ASM_JAVA5/src/main/resources/templates/product/list.html
@@ -44,6 +44,7 @@
     }
 </style>
 <body>
+
 <main class="max-w-[1280px] mx-auto flex flex-col md:flex-row gap-8 px-6 py-8">
     <aside class="w-full md:w-64 flex-shrink-0">
         <div class="sticky top-24 space-y-6">
@@ -114,7 +115,10 @@
                         <span class="text-primary font-extrabold text-lg">35.000đ</span>
                         <button class="w-full bg-primary text-white py-2.5 rounded-xl flex items-center justify-center gap-2 hover:bg-primary/90 transition-colors shadow-lg shadow-primary/10">
                             <span class="material-symbols-outlined text-lg">info</span>
-                            <span class="text-sm font-bold">Xem chi tiết</span>
+                            <span class="text-sm font-bold">
+                            <a th:href="@{/product/detail}">
+                                Xem chi tiết</a>
+                            </span>
                         </button>
                     </div>
                 </div>
