--- a/ASM_JAVA5/src/main/resources/templates/cart/cart.html
+++ b/ASM_JAVA5/src/main/resources/templates/cart/cart.html
@@ -37,7 +37,8 @@
 </style>
 <body>
 
-
+<!-- ✅ GỌI HEADER -->
+<div th:replace="layout/header :: header"></div>
 
 <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
 
@@ -207,6 +208,7 @@
   </main>
 
 </div>
-
+<!-- ✅ GỌI footer -->
+<div th:replace="layout/footer :: footer"></div>
 </body>
 </html>
