--- a/ASM_JAVA5/src/main/resources/templates/checkout/checkout.html
+++ b/ASM_JAVA5/src/main/resources/templates/checkout/checkout.html
@@ -42,7 +42,8 @@
   }
 </style>
 <body>
-
+<!-- ✅ GỌI HEADER -->
+<div th:replace="layout/header :: header"></div>
 
 
 <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
@@ -203,6 +204,7 @@
   </main>
 
 </div>
-
+<!-- ✅ GỌI footer -->
+<div th:replace="layout/footer :: footer"></div>
 </body>
 </html>
