--- a/ASM_JAVA5/src/main/resources/templates/layout/menu.html
+++ b/ASM_JAVA5/src/main/resources/templates/layout/menu.html
@@ -5,12 +5,22 @@
     <title>Title</title>
 </head>
 <body>
+<!--<nav class="flex flex-col gap-2">-->
+<!--  <a th:each="m : ${menus}"-->
+<!--     class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-gray-100 dark:hover:bg-gray-800 transition-all" href="#">-->
+<!--    <span class="material-symbols-outlined">sell</span>-->
+<!--    <span class="text-sm font-medium" th:text="${m.name}"></span>-->
+<!--  </a>-->
+<!--</nav>-->
 <nav class="flex flex-col gap-2">
-  <a th:each="m : ${menus}"
-     class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-gray-100 dark:hover:bg-gray-800 transition-all" href="#">
-    <span class="material-symbols-outlined">sell</span>
-    <span class="text-sm font-medium" th:text="${m.name}"></span>
-  </a>
+    <a th:each="m : ${menus}"
+       th:href="@{/product/list(menuId=${m.id})}"
+       th:classappend="${menuId == m.id} ? 'bg-primary/10 text-primary font-bold' : ''"
+       class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-gray-100 dark:hover:bg-gray-800 transition-all">
+
+        <span class="material-symbols-outlined">sell</span>
+        <span class="text-sm font-medium" th:text="${m.name}"></span>
+    </a>
 </nav>
 
 </body>
